TerrainMesh no longer singleton